@@ -1,3 +1,7 @@
+drkns 15.11.2016 07:32:16 +0200 - build 4840
+
+1. Убран workaround, добавленный в 4835 - исправлено в библиотеке.
+
 zg 13.11.2016 23:24:26 +0200 - build 4839
 
 1. уточнение 4838 для меню.
